# diff-getter-python

./: README.md  hello.py  pyproject.toml
src/diff_getter/: __init__.py  __main__.py  context_diff_getter.py  server.py  unified_diff_getter.py
tests/diff_getter/: test_context_diff_getter.py  test_unified_diff_getter.py
