[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diff-getter"
version = "0.1.16"
description = "A tool to get diffs between text strings"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "tatn"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = []

[dependency-groups]
dev = [
    "black>=24.10.0",
    "build>=1.2.2.post1",
    "hatch>=1.14.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
    "twine>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/tatn/diff-getter-python"
Repository = "https://github.com/tatn/diff-getter-python"


[project.scripts]
diff-getter = "diff_getter:main"
serve = "diff_getter:server.main"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/diff_getter"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
select = ["E", "F", "I", "N"]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
